# garbled-snark-verifier

./: Cargo.toml  README.md  codespell_ignore.txt  file.txt  multiplier64.txt  subtracter64.txt
.github/workflows/: build_and_test.yml  checks.yml  gate-count-badges.yml
badge_data/: free.json  nonfree.json  total.json
examples/: groth16_gc_gate_count.rs
src/: bristol.rs  circuit.rs  gate.rs  lib.rs  s.rs  utils.rs  wire.rs  xor.rs
src/bigint/: mod.rs
src/blake3/: mod.rs
src/circuits/: basic.rs  groth16.rs  mod.rs
src/circuits/bigint/: add.rs  cmp.rs  mod.rs  mul.rs  utils.rs
src/circuits/bn254/: finalexp.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs  pairing.rs  utils.rs
src/core/: bristol.rs  circuit.rs  gate.rs  mod.rs  s.rs  utils.rs  wire.rs
src/u4/: u4_add.rs  u4_logic.rs  u4_rot.rs
