[package]
name = "toy-garbled"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin = { version = "0.32.5", features = ["rand-std"] }
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }
blake3 = "1.6.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
num-traits = "0.2.18"
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.9.1"
rand_chacha = "0.3.1"
itertools = "0.13.0"
bitvm = { git = "https://github.com/chainwayxyz/BitVM" }
hex = "0.4.3"
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace"] }
ark-ff = "0.5.0"
serial_test = "3.2.0"
