[package]
name = "garbled-snark-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
num-traits = "0.2.18"
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.9.1"
rand_chacha = "0.3.1"
itertools = "0.13.0"
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["print-trace"] }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"
serial_test = "3.2.0"
once_cell = "1.21.3"